--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<p> Femi Is 117 Section 006 </p>
+<body>
+  <p> Femi Is 117 Section 006 </p>
+</body>
 
 </html>
