--- a/test.html
+++ b/test.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
+  <head>
+    <title>Olufemi is Awesome</title>
+  </head>
 <body>
   <p> OluFemi Akosile </p>
   <p> IS 117 Section 006 </p>
